back-end-service.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-http-backend
