tcl-mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: ingress-nginx
spec:
  selector: 
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: NodePort
