tcl-nexus3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus3-service
  namespace: ingress-nginx
spec:
  selector: 
    app: nexus3
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  type: NodePort
