tcl-sonarqube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: ingress-nginx
spec:
  selector: 
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  type: NodePort
