tcl-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#    kubernetes.io/ingress.global-static-ip-name: "tcl"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tcl.skcc.com
    http:
      paths:
#      - path: /nexus3
#        backend:
#          serviceName: nexus3-service
#          servicePort: 8081
#      - path: /scouter
#        backend:
#          serviceName: scouter-server-service
#          servicePort: 6180
#      - path: /sonarqube
#        backend:
#          serviceName: sonarqube-service
#          servicePort: 9000
#      - path: /petclinic
#        backend:
#          serviceName: spring-petclinic-service
#          servicePort: 8081
      - path: /jenkins/*
        backend:
          serviceName: jenkins-service
          servicePort: 8081
